# filecollection

./: .gitignore  Doxyfile  README.md  exec_cmake.sh  next_project.sh
.github/workflows/: auto_test.yml  doxygen_loader.yml
homework/: CMakeLists.txt
homework/cv_image_greyscale/: CMakeLists.txt
homework/cv_image_greyscale/include/: cv_image_greyscale.hpp
homework/cv_image_greyscale/src/: cv_image_greyscale.cpp  main.cpp
homework/cv_image_greyscale/test/: cv_image_greyscale_test.cpp
homework/cv_image_test3/: CMakeLists.txt
homework/cv_image_test3/include/: cv_image_test3.hpp
homework/cv_image_test3/src/: cv_image_test3.cpp  main.cpp
homework/cv_image_test3/test/: cv_image_test3_test.cpp
homework/cv_test/: CMakeLists.txt
homework/cv_test/include/: cv_test.hpp
homework/cv_test/src/: cv_test.cpp  main.cpp
homework/cv_test/test/: cv_test_test.cpp
homework/homework_2-3/: CMakeLists.txt
homework/homework_2-3/include/: homework_2-3.hpp
homework/homework_2-3/src/: homework_2-3.cpp  main.cpp
homework/homework_2-3/test/: homework_2-3_test.cpp
homework/tesst/: CMakeLists.txt
homework/tesst/include/: developer.hpp
homework/tesst/src/: main.cpp  tesst.cpp
homework/tesst/test/: tesst_test.cpp
lesson_files/: CMakeLists.txt
lesson_files/exercise_1/: CMakeLists.txt
lesson_files/exercise_1/include/: exercise_1.h
lesson_files/exercise_1/src/: exercise_1.cpp  main.cpp
lesson_files/exercise_1/test/: exercise_1_test.cpp
lesson_files/exercise_2/: CMakeLists.txt
lesson_files/exercise_2/include/: exercise_2.h
lesson_files/exercise_2/src/: exercise_2.cpp  main.cpp
lesson_files/exercise_2/test/: exercise_2_test.cpp
lesson_files/exercise_3/: CMakeLists.txt
lesson_files/exercise_3/include/: Firstclass.hpp  exercise_3.hpp
lesson_files/exercise_3/src/: exercise_3.cpp  main.cpp
lesson_files/exercise_3/test/: exercise_3_test.cpp
lesson_files/exercise_4/: CMakeLists.txt
lesson_files/exercise_4/include/: exercise_4.hpp
lesson_files/exercise_4/src/: exercise_4.cpp  main.cpp
lesson_files/exercise_4/test/: exercise_4_test.cpp
lesson_files/exercise_5/: CMakeLists.txt
lesson_files/exercise_5/include/: exercise_5.hpp
lesson_files/exercise_5/src/: exercise_5.cpp  main.cpp
lesson_files/exercise_5/test/: exercise_5_test.cpp
lesson_files/exercise_6/: .gitignore  CMakeLists.txt
lesson_files/exercise_6/include/: exercise_6.hpp
lesson_files/exercise_6/src/: exercise_6.cpp  main.cpp
lesson_files/exercise_6/test/: exercise_6_test.cpp
lesson_files/exercise_7/: CMakeLists.txt
lesson_files/exercise_7/include/: exercise_7.hpp
lesson_files/exercise_7/src/: exercise_7.cpp  main.cpp
lesson_files/exercise_7/test/: exercise_7_test.cpp
lesson_files/exercise_8/: CMakeLists.txt
lesson_files/exercise_8/include/: exercise_8.hpp
lesson_files/exercise_8/src/: exercise_8.cpp  main.cpp
lesson_files/exercise_8/test/: exercise_8_test.cpp
test1/: CMakeLists.txt
test1/include/: test1.hpp
test1/src/: main.cpp  test1.cpp
test1/test/: test1_test.cpp
test2/: CMakeLists.txt
test2/include/: test2.h
test2/src/: main.cpp  test2.cpp
test2/test/: test2_test.cpp
